Services: fix resources

--- a/Services/Makefile
+++ b/Services/Makefile
@@ -74,7 +74,7 @@ SYSTEM_INCLUDE_PATHS =
 #	Additional paths paths to look for local headers. These use the form
 #	#include "header". Directories that contain the files in SRCS are
 #	automatically included.
-LOCAL_INCLUDE_PATHS =
+LOCAL_INCLUDE_PATHS = /boot/system/develop/headers/private/interface
 
 #	Specify the level of optimization that you want. Specify either NONE (O0),
 #	SOME (O1), FULL (O3), or leave blank (for the default optimization level).
