TraverseApps2: Improve picking, initial suite editing support

--- a/TraverseApps2/Makefile
+++ b/TraverseApps2/Makefile
@@ -31,7 +31,7 @@ APP_MIME_SIG =
 #	means this Makefile will not work correctly if two source files with the
 #	same name (source.c or source.cpp) are included from different directories.
 #	Also note that spaces in folder names do not work well with this Makefile.
-SRCS = TraverseApps.cpp HighlightRect.cpp
+SRCS = TraverseApps.cpp HighlightRect.cpp SuiteEditor.cpp
 
 #	Specify the resource definition files to use. Full or relative paths can be
 #	used.
@@ -69,7 +69,7 @@ LIBPATHS =
 #	Additional paths to look for system headers. These use the form
 #	"#include <header>". Directories that contain the files in SRCS are
 #	NOT auto-included here.
-SYSTEM_INCLUDE_PATHS =
+SYSTEM_INCLUDE_PATHS = /boot/system/develop/headers/private/app
 
 #	Additional paths paths to look for local headers. These use the form
 #	#include "header". Directories that contain the files in SRCS are
