--- a/TraverseApps2/Makefile
+++ b/TraverseApps2/Makefile
@@ -107,7 +107,7 @@ SYMBOLS :=
 DEBUGGER :=
 
 #	Specify any additional compiler flags to be used.
-COMPILER_FLAGS =
+COMPILER_FLAGS = -Wall
 
 #	Specify any additional linker flags to be used.
 LINKER_FLAGS =
