--- a/SystemManager/Makefile
+++ b/SystemManager/Makefile
@@ -35,7 +35,7 @@ SRCS = SystemManager.cpp TeamWindow.cpp StackWindow.cpp
 
 #	Specify the resource definition files to use. Full or relative paths can be
 #	used.
-RDEFS =
+RDEFS = SystemManager.rdef
 
 #	Specify the resource files to use. Full or relative paths can be used.
 #	Both RDEFS and RSRCS can be utilized in the same Makefile.
