--- a/Users/Makefile
+++ b/Users/Makefile
@@ -31,7 +31,7 @@ APP_MIME_SIG =
 #	means this Makefile will not work correctly if two source files with the
 #	same name (source.c or source.cpp) are included from different directories.
 #	Also note that spaces in folder names do not work well with this Makefile.
-SRCS = Users.cpp UserForm.cpp UserDB.cpp
+SRCS = Users.cpp UserForm.cpp PasswordForm.cpp UserDB.cpp
 
 #	Specify the resource definition files to use. Full or relative paths can be
 #	used.
