SystemManager: improve user display, show name for threads and semaphores

--- a/SystemManager/Makefile
+++ b/SystemManager/Makefile
@@ -31,7 +31,7 @@ APP_MIME_SIG =
 #	means this Makefile will not work correctly if two source files with the
 #	same name (source.c or source.cpp) are included from different directories.
 #	Also note that spaces in folder names do not work well with this Makefile.
-SRCS = SystemManager.cpp TeamWindow.cpp StackWindow.cpp Errors.cpp
+SRCS = SystemManager.cpp TeamWindow.cpp StackWindow.cpp Errors.cpp Utils.cpp
 
 #	Specify the resource definition files to use. Full or relative paths can be
 #	used.
