--- a/DragDrop/Makefile
+++ b/DragDrop/Makefile
@@ -129,3 +129,6 @@ DRIVER_PATH =
 DEVEL_DIRECTORY := \
 	$(shell findpaths -r "makefile_engine" B_FIND_PATH_DEVELOP_DIRECTORY)
 include $(DEVEL_DIRECTORY)/etc/makefile-engine
+
+run :: default
+	$(TARGET)
