--- a/TraverseApps/makefile
+++ b/TraverseApps/makefile
@@ -121,3 +121,6 @@ DRIVER_PATH =
 DEVEL_DIRECTORY := \
 	$(shell findpaths -r "makefile_engine" B_FIND_PATH_DEVELOP_DIRECTORY)
 include $(DEVEL_DIRECTORY)/etc/makefile-engine
+
+run :: default
+	$(TARGET)
