--- a/TraverseApps2/Makefile
+++ b/TraverseApps2/Makefile
@@ -69,7 +69,7 @@ LIBPATHS =
 #	Additional paths to look for system headers. These use the form
 #	"#include <header>". Directories that contain the files in SRCS are
 #	NOT auto-included here.
-SYSTEM_INCLUDE_PATHS = /boot/system/develop/headers/private/app
+SYSTEM_INCLUDE_PATHS = /boot/system/develop/headers/private/app /boot/system/develop/headers/private/interface
 
 #	Additional paths paths to look for local headers. These use the form
 #	#include "header". Directories that contain the files in SRCS are
