--- a/SystemManager/Makefile
+++ b/SystemManager/Makefile
@@ -129,6 +129,7 @@ DRIVER_PATH =
 DEVEL_DIRECTORY := \
 	$(shell findpaths -r "makefile_engine" B_FIND_PATH_DEVELOP_DIRECTORY)
 include $(DEVEL_DIRECTORY)/etc/makefile-engine
+#include makefile-engine
 
 run :: default
 	$(TARGET)
