MsgDump, fix 32bit build
Co-authored-by: Chris Roberts <cpr420@gmail.com>

--- a/MsgDump/makefile
+++ b/MsgDump/makefile
@@ -61,7 +61,7 @@ LIBS = $(STDCPPLIBS) be columnlistview
 #	to the Makefile. The paths included are not parsed recursively, so
 #	include all of the paths where libraries must be found. Directories where
 #	source files were specified are	automatically included.
-LIBPATHS = /boot/system/develop/lib
+LIBPATHS =
 
 #	Additional paths to look for system headers. These use the form
 #	"#include <header>". Directories that contain the files in SRCS are
