--- a/MsgDump/makefile
+++ b/MsgDump/makefile
@@ -54,7 +54,7 @@ RSRCS = \
 #	- 	if your library does not follow the standard library naming scheme,
 #		you need to specify the path to the library and it's name.
 #		(e.g. for mylib.a, specify "mylib.a" or "path/mylib.a")
-LIBS = $(STDCPPLIBS) be columnlistview
+LIBS = $(STDCPPLIBS) be columnlistview tracker
 
 #	Specify additional paths to directories following the standard libXXX.so
 #	or libXXX.a naming scheme. You can specify full paths or paths relative
