[wip] PictureDumpJson2: implement JSON reader

--- a/PictureDumpJson2/meson.build
+++ b/PictureDumpJson2/meson.build
@@ -15,3 +15,15 @@ executable('PictureDumpJson',
 	gnu_symbol_visibility: 'hidden',
 	install: true
 )
+
+executable('PictureJsonIdentity',
+	'PictureJsonIdentity.cpp',
+	'PictureVisitorJson.cpp',
+	'PictureJson.cpp',
+	dependencies: [
+		dep_libbe,
+		dep_rapidjson,
+	],
+	gnu_symbol_visibility: 'hidden',
+	install: true
+)
